<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.raafe.gossip.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_Personal_Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/txt_Personal_Info"
            android:textColor="#3ea49f"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:fontFamily="monospace"
            android:text="@string/txt_Name"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Personal_Info" />

        <EditText
            android:id="@+id/edt_Name"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/style_edit_text"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textColor="#ababab"
            android:textCursorDrawable="@drawable/style_cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_Name"
            app:layout_constraintTop_toBottomOf="@+id/txt_Personal_Info" />

        <TextView
            android:id="@+id/txt_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="monospace"
            android:text="@string/txt_Email"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Name" />

        <EditText
            android:id="@+id/edt_Email"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="73dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_edit_text"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textColor="#ababab"
            android:textCursorDrawable="@drawable/style_cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_Email"
            app:layout_constraintTop_toBottomOf="@+id/edt_Name" />

        <TextView
            android:id="@+id/txt_Phone"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="monospace"
            android:text="@string/txt_Phone"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Email" />

        <EditText
            android:id="@+id/edt_Phone"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="81dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_edit_text"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="phone"
            android:paddingLeft="5dp"
            android:textColor="#ababab"
            android:textCursorDrawable="@drawable/style_cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_Phone"
            app:layout_constraintTop_toBottomOf="@+id/edt_Email" />

        <TextView
            android:id="@+id/txt_DOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="monospace"
            android:text="@string/txt_DOB"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Phone" />

        <EditText
            android:id="@+id/edt_DOB"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="81dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_edit_text"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="date"
            android:paddingLeft="5dp"
            android:textColor="#ababab"
            android:textCursorDrawable="@drawable/style_cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_Phone"
            app:layout_constraintTop_toBottomOf="@+id/edt_Phone" />

        <TextView
            android:id="@+id/txt_Acc_Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="monospace"
            android:text="@string/txt_Acc_Info"
            android:textColor="#3ea49f"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_DOB" />

        <TextView
            android:id="@+id/txt_Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="27dp"
            android:fontFamily="monospace"
            android:text="@string/txt_Username"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Acc_Info" />

        <EditText
            android:id="@+id/edt_Username"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/style_edit_text"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textColor="#ababab"
            android:textCursorDrawable="@drawable/style_cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_Username"
            app:layout_constraintTop_toBottomOf="@+id/txt_Acc_Info" />

        <TextView
            android:id="@+id/txt_Pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="monospace"
            android:text="@string/txt_Password"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Username" />

        <EditText
            android:id="@+id/edt_Pass"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_edit_text"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="#ababab"
            android:textCursorDrawable="@drawable/style_cursor_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_Pass"
            app:layout_constraintTop_toBottomOf="@+id/edt_Username" />

        <TextView
            android:id="@+id/txt_Confirm_Pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="monospace"
            android:text="@string/txt_Confirm_Password"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Pass" />

        <EditText
            android:id="@+id/edt_Comfirm_Pass"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_edit_text"
            android:ems="10"
            android:fontFamily="monospace"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="#ababab"
            android:textCursorDrawable="@drawable/style_cursor_color"
            android:imeActionId="@+id/register_form_finished"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_Pass"
            app:layout_constraintTop_toBottomOf="@+id/edt_Pass" />

        <Button
            android:id="@+id/btn_Create_Account"
            android:layout_width="135dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/style2_button_normal"
            android:fontFamily="monospace"
            android:text="@string/txt_create_account"
            android:textColor="#3A3A3A"
            android:textSize="12sp"
            android:onClick="signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Confirm_Pass" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
